[package]
name = "ipc_examples"
version = "0.1.0"
authors = ["diamondrod", "awilson-kx"]
edition = "2021"
description = """
NOT A PACKAGE TO PUBLISH.

This module provides examples of using `ipc` feature of `kxkdb` library. The functions defined in
 the library are used for simple tests.
"""

[dependencies]

[dev-dependencies]
kxkdb={path="../kxkdb", features=["ipc"]}
chrono="0.4"
async-trait="0.1"
tokio={version="1.0", features=["net", "rt", "io-util", "fs", "macros", "rt-multi-thread"]}
